# cbmc-starter-kit

./: .gitignore  404.html  Makefile  README.md  index.html  print.html  pyproject.toml  remove-apache-license-identifier.py  searchindex.js  searchindex.json  setup.cfg
.github/: dependabot.yml
.github/cloudformation/: README.md  oidc.yaml  token.yaml
.github/workflows/: makefile-test.yaml  publish.yaml  release-brew.yaml  release-pypi.yaml  release.md  release.yaml  run-tests.yaml  summarize-test.yaml
contributing/: index.html
docker/: README.md
docker/centos7/: Dockerfile  Makefile
docker/centos8/: Dockerfile  Makefile
docker/hackathon/: Dockerfile  Makefile
docker/ubuntu18/: Dockerfile  Makefile
docs/: Makefile  README.md  book.toml
docs/src/: README.md  SUMMARY.md
installation/: index.html
reference-manual/: cbmc-starter-kit-migrate-license.html  cbmc-starter-kit-setup-proof.html  cbmc-starter-kit-setup.html  cbmc-starter-kit-update.html  index.html
resources/: index.html
scripts/: repository.py  setup-proof.py  setup.py  util.py
src/cbmc_starter_kit/: Makefile  arguments.py  ctagst.py  migrate_license.py  print_tool_versions.py  repository.py  setup.py  setup_ci.py  setup_proof.py  update.py  util.py  version.py
template-for-proof/: FUNCTION_harness.c  Makefile  README.md
template-for-repository/: .gitignore  README.md
template-for-repository/negative_tests/: README.md
template-for-repository/proofs/: Makefile.common  (+7 more)
training-material/: CODING-FOR-VERIFICATION.md  DEBUG-CBMC.md  FAQ.md  PERFORMANCE_DEBUG.md  PLANNING.md  PROOF-WRITING.md  README.md  checklist.md
tutorial/: index.html
(+94 files in other folders)
