# See https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = cbmc-starter-kit
version = 2.1.1
author = Mark R. Tuttle
author_email = mrtuttle@amazon.com
description = CBMC starter kit makes it easy to add CBMC verification to a software project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/model-checking/cbmc-starter-kit
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    setuptools
    gitpython
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
# We want to two subtrees of data, but static configuration files do
# not appear to give us an easy way to do this.
cbmc_starter_kit =
  etc/*
  etc/bash_completion.d/*
  template-for-proof/*
  template-for-proof/*/*
  template-for-proof/*/*/*
  template-for-proof/*/*/*/*
  template-for-repository/*
  template-for-repository/*/*
  template-for-repository/*/*/*
  template-for-repository/*/*/*/*
  template-for-repository/.gitignore

[options.entry_points]
console_scripts =
    cbmc-starter-kit-migrate-license = cbmc_starter_kit.migrate_license:main
    cbmc-starter-kit-setup = cbmc_starter_kit.setup:main
    cbmc-starter-kit-setup-proof = cbmc_starter_kit.setup_proof:main
    cbmc-starter-kit-update = cbmc_starter_kit.update:main
